macros/tests/unhappy/expected_param_description_str_literal.test.stderr
error: expected string literal
 --> tests/unhappy/expected_param_description_str_literal.test.rs:8:23
  |
8 |         #[wasm_export(param_description = something)]
  |                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
